
2000-12-12  Jim Davidson

	* nssock/sock.cpp: Fixed multiple-load problems, added sndbuf,
	rcvbuf, sendwait, and recvwait options. Added configurable backlog
	via Ns_SockListenEx. Fixed compile bugs for ssl. Restructured the
	socket module to wait in server busy situations instead of sending
	the server busy message.  Also, moved the graceful close burden to
	the SockThread from the connection thread.

	* thread/win32.cpp: Moved WinThread allocation to DllMain,
	eliminating GetWinThread function. Also, disabled thread cleanup
	for final thread to avoid any TLS cleanup callbacks attempting to
	invoke code in unloaded libraries like Tcl. Removed call to
	NsInitThread no longer needed. Switched to rolling condition
	broadcast wakeup as in the sproc code.  More fixes for new Thread
	context model.
	
	* thread/tls.c: Changed NsLock API's to return 1/0 instead of
	NS_OK/NS_TIMEOUT and more use of Ns_MasterLock to keep things
	simple.

	* thread/thread.c: Changed thread enum to return Ns_Thread, not
	Ns_Thread pointer which didn't make much sense.  Updated "ns_info
	pools" command to reflect change. Fixed bugs with Ns_ThreadEnum
	and pool counters. Update of the Ns_Pool API to support more stats
	gathering available via new Ns_PoolStats API. Remove Thread->etime
	and NsPool API's. Moved sprintf of default thread name from
	NsThreadMain to NsInitThread under protection of threads
	lock. Added comment for NsInitThread. More fixes for new Thread
	context model. Updated sproc.cpp code for new Thread management
	and removed the wait for thread startup which shouldn't be
	needed.

	* thread/test.c: Cleaned up code a bit to quiet compiler.  Better
	test for PTHREAD_TEST.  Fixed undefined var bug for sproc.  Added
	some comments, a native pthread test, and a recursive stack
	checker.

	* thread/tcl8x.c: Added Tcl_JoinThread for benefit of Tcl8.4.

	* thread/sproc.cpp: Changed NsLock API's to return 1/0 instead of
	NS_OK/NS_TIMEOUT and more use of Ns_MasterLock to keep things